--- a/templates/page1.html
+++ b/templates/page1.html
@@ -399,7 +399,7 @@
 
                     <!-- Картинка сверху -->
                     <div class="top-image">
-                        <img src="/static/images/croco.png" alt="Символ"/>
+                        <img src="/static/images/bling.png" alt="Символ"/>
                     </div>
 
                     <div class="character_up_buy"></div>
@@ -511,90 +511,88 @@
 
     <!-- Квесты -->
     <div class="page" id="quests" style="display:none;">
-        <div class='quests_text'>
-            <p>Основные задачи</p>
-        </div>
 
-        <div class='quests_text_2'>
-            <p>Дополнительные задачи</p>
-        </div>
+        <div class="cards-container">
+            <div class="card-text">Выберите задание</div>
 
-        <div class='quests_text_3'>
-            <p>Игровые задачи</p>
-        </div>
-
-        <div class="card">
-            <img src="/static/images/icon.png" alt="TON Logo" class="card-logo">
-            <div class="card-content">
-                <div class="card-title">Подпишись на наш телеграм канал</div>
-                <div class="card-amount">
-                    <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
-                    50 000
+            <div class="card">
+                <img src="/static/images/icon.png" alt="TON Logo" class="card-logo">
+                <div class="card-content">
+                    <div class="card-title">Подписка на телеграм</div>
+                    <div class="card-amount">
+                        <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
+                        50 000
+                    </div>
                 </div>
+                <div class="card-arrow">&gt;</div>
             </div>
-            <div class="card-arrow">&gt;</div>
+
+            <div class="card">
+                <img src="/static/images/icon.png" alt="TON Logo" class="card-logo">
+                <div class="card-content">
+                    <div class="card-title">Подключи свой кошелек</div>
+                    <div class="card-amount">
+                        <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
+                        100 000
+                    </div>
+                </div>
+                <div class="card-arrow">&gt;</div>
+            </div>
+
+            <div class="card">
+                <img src="/static/images/icon.png" alt="TON Logo" class="card-logo">
+                <div class="card-content">
+                    <div class="card-title">Пригласи 5 друзей</div>
+                    <div class="card-amount">
+                        <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
+                        150 000
+                    </div>
+                </div>
+                <div class="card-arrow">&gt;</div>
+            </div>
         </div>
 
-        <div class="card_2">
-            <img src="/static/images/icon.png" alt="TON Logo" class="card-logo">
-            <div class="card-content">
-                <div class="card-title">Пригласи 5 друзей</div>
-                <div class="card-amount">
-                    <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
-                    100 000
-                </div>
-            </div>
-            <div class="card-arrow">&gt;</div>
-        </div>
+        <div class="cards-container2">
+            <div class="card-text">Задания партнеров</div>
 
-        <div class="card_3">
-            <img src="/static/images/icon.png" alt="TON Logo" class="card-logo">
-            <div class="card-content">
-                <div class="card-title">Подключи свой кошелек</div>
-                <div class="card-amount">
-                    <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
-                    150 000
+            <div class="card">
+                <img src="/static/images/icon.png" alt="TON Logo" class="card-logo">
+                <div class="card-content">
+                    <div class="card-title">Доп задание</div>
+                    <div class="card-amount">
+                        <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
+                        50 000
+                    </div>
                 </div>
+                <div class="card-arrow">&gt;</div>
             </div>
-            <div class="card-arrow">&gt;</div>
-        </div>
 
-        <div class="card_4">
-            <img src="/static/images/icon.png" alt="TON Logo" class="card-logo">
-            <div class="card-content">
-                <div class="card-title">Подпишись на тг Павла Дурова</div>
-                <div class="card-amount">
-                    <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
-                    200 000
+            <div class="card">
+                <img src="/static/images/icon.png" alt="TON Logo" class="card-logo">
+                <div class="card-content">
+                    <div class="card-title">Доп задание</div>
+                    <div class="card-amount">
+                        <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
+                        100 000
+                    </div>
                 </div>
+                <div class="card-arrow">&gt;</div>
             </div>
-            <div class="card-arrow">&gt;</div>
-        </div>
 
-        <div class="card_5">
-            <img src="/static/images/icon.png" alt="TON Logo" class="card-logo">
-            <div class="card-content">
-                <div class="card-title">Сыграй в мини-игру</div>
-                <div class="card-amount">
-                    <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
-                    30 000
+            <div class="card">
+                <img src="/static/images/icon.png" alt="TON Logo" class="card-logo">
+                <div class="card-content">
+                    <div class="card-title">Доп задание</div>
+                    <div class="card-amount">
+                        <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
+                        150 000
+                    </div>
                 </div>
+                <div class="card-arrow">&gt;</div>
             </div>
-            <div class="card-arrow">&gt;</div>
-        </div>
-
-        <div class="card_6">
-            <img src="/static/images/icon.png" alt="TON Logo" class="card-logo">
-            <div class="card-content">
-                <div class="card-title">Открой 5 новых миров</div>
-                <div class="card-amount">
-                    <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
-                    200 000
-                </div>
-            </div>
-            <div class="card-arrow">&gt;</div>
         </div>
     </div>
+
     <!-- Босс -->
     <div class="page" id="top" style="display:none;">
 
