--- a/templates/page1.html
+++ b/templates/page1.html
@@ -268,7 +268,7 @@
         </div>
 
         <!-- Магазин герои -->
-        <div id="heroes" class="content-section" style="display:none;">
+        <div id="heroes" class="content-section" style="display:none; height: 190vh;">
 
 
             <div class="character-preview">
@@ -345,6 +345,24 @@
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/leon.png" alt="Character 12">
                         <p>Character 12</p>
+                    </div>
+                    <div class="character" data-id="12" data-name="Character 13"
+                         data-img="/static/images/syth.png"
+                         data-description="Water is calm and adaptable, flowing through challenges.">
+                        <img src="/static/images/syth.png" alt="Character 13">
+                        <p>Character 13</p>
+                    </div>
+                    <div class="character " data-id="12" data-name="Character 14"
+                         data-img="/static/images/cat.png"
+                         data-description="Water is calm and adaptable, flowing through challenges.">
+                        <img src="/static/images/cat.png" alt="Character 14">
+                        <p>Character 14</p>
+                    </div>
+                    <div class="character " data-id="12" data-name="Character 15"
+                         data-img="/static/images/minion.png"
+                         data-description="Water is calm and adaptable, flowing through challenges.">
+                        <img src="/static/images/minion.png" alt="Character 15">
+                        <p>Character 15</p>
                     </div>
                 </div>
             </div>
