--- a/templates/page1.html
+++ b/templates/page1.html
@@ -284,81 +284,81 @@
                         <img src="/static/images/croco.png" alt="Character 1">
                         <p>Character 1</p>
                     </div>
-                    <div class="character locked" data-id="2" data-name="Character 2" data-img="/static/images/cot.png"
+                    <div class="character " data-id="2" data-name="Character 2" data-img="/static/images/cot.png"
                          data-description="Кот играет на гитаре, удваивая количество получаемых монет на 5 мин">
                         <img src="/static/images/cot.png" alt="Character 2">
                         <p>Character 2</p>
                     </div>
-                    <div class="character locked" data-id="3" data-name="Character 3"
+                    <div class="character " data-id="3" data-name="Character 3"
                          data-img="/static/images/groot.png" data-description="Восстанавливает энергию на 10% быстрее">
                         <img src="/static/images/groot.png" alt="Character 3">
                         <p>Character 3</p>
                     </div>
-                    <div class="character locked" data-id="4" data-name="Character 4"
+                    <div class="character " data-id="4" data-name="Character 4"
                          data-img="/static/images/golem.png"
                          data-description="Голем Базя позволяет крутить рулетку 2 раза">
                         <img src="/static/images/golem.png" alt="Character 4">
                         <p>Character 4</p>
                     </div>
-                    <div class="character locked" data-id="5" data-name="Character 5" data-img="/static/images/fire.png"
+                    <div class="character " data-id="5" data-name="Character 5" data-img="/static/images/fire.png"
                          data-description="Fire is a blazing warrior full of passion.">
                         <img src="/static/images/fire.png" alt="Character 5">
                         <p>Character 5</p>
                     </div>
-                    <div class="character locked" data-id="6" data-name="Character 6"
+                    <div class="character " data-id="6" data-name="Character 6"
                          data-img="/static/images/water.png"
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/water.png" alt="Character 6">
                         <p>Character 6</p>
                     </div>
-                    <div class="character locked" data-id="7" data-name="Character 7" data-img="/static/images/tor.png"
+                    <div class="character " data-id="7" data-name="Character 7" data-img="/static/images/tor.png"
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/tor.png" alt="Character 7">
                         <p>Character 7</p>
                     </div>
-                    <div class="character locked" data-id="0" data-name="Character 8"
+                    <div class="character " data-id="8" data-name="Character 8"
                          data-img="/static/images/witch.png"
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/witch.png" alt="Character 8">
                         <p>Character 8</p>
                     </div>
-                    <div class="character locked" data-id="9" data-name="Character 9"
+                    <div class="character " data-id="9" data-name="Character 9"
                          data-img="/static/images/angel.png"
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/angel.png" alt="Character 9">
                         <p>Character 9</p>
                     </div>
-                    <div class="character locked" data-id="10" data-name="Character 10"
+                    <div class="character " data-id="10" data-name="Character 10"
                          data-img="/static/images/ananas.png"
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/ananas.png" alt="Character 10">
                         <p>Character 10</p>
                     </div>
-                    <div class="character locked" data-id="11" data-name="Character 11"
+                    <div class="character " data-id="11" data-name="Character 11"
                          data-img="/static/images/frog.png"
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/frog.png" alt="Character 11">
                         <p>Character 11</p>
                     </div>
-                    <div class="character locked" data-id="12" data-name="Character 12"
+                    <div class="character " data-id="12" data-name="Character 12"
                          data-img="/static/images/leon.png"
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/leon.png" alt="Character 12">
                         <p>Character 12</p>
                     </div>
-                    <div class="character" data-id="12" data-name="Character 13"
+                    <div class="character" data-id="13" data-name="Character 13"
                          data-img="/static/images/syth.png"
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/syth.png" alt="Character 13">
                         <p>Character 13</p>
                     </div>
-                    <div class="character " data-id="12" data-name="Character 14"
+                    <div class="character " data-id="14" data-name="Character 14"
                          data-img="/static/images/cat.png"
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/cat.png" alt="Character 14">
                         <p>Character 14</p>
                     </div>
-                    <div class="character " data-id="12" data-name="Character 15"
+                    <div class="character " data-id="15" data-name="Character 15"
                          data-img="/static/images/minion.png"
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/minion.png" alt="Character 15">
