--- a/templates/page1.html
+++ b/templates/page1.html
@@ -86,6 +86,8 @@
         </div>
     </div>
 
+<div id="butterfly-container"></div>
+ <canvas id="snowCanvas"></canvas>
     <!-- Друзья -->
     <div class="page" id="friends" style="display:none;height: 1000px;">
         <div class="invitation-container">
@@ -640,6 +642,7 @@
 <script src="{{ url_for('static', filename='script_autoclicker.js') }}"></script>
 <script src="{{ url_for('static', filename='script_heroes.js') }}"></script>
 <script src="{{ url_for('static', filename='boss.js') }}"></script>
+<script src="{{ url_for('static', filename='dragon.js') }}"></script>
 
 
 </body>
