--- a/static/style.css
+++ b/static/style.css
@@ -1903,6 +1903,60 @@ html, body {
     100% { transform: translateY(-150px) scale(1.5); opacity: 0.8; }
 }
 
+/* Бабочкм */
+#butterfly-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none; /* Чтобы бабочки не блокировали клики */
+    z-index: 999;
+}
+
+.butterfly {
+    position: absolute;
+    background-image: url('/static/images/batterfly.png'); /* Изображение бабочки */
+    background-size: cover;
+    width: 30px; /* Размер бабочки */
+    height: 30px; /* Размер бабочки */
+    opacity: 0.8;
+    animation: flyButterfly 10s infinite linear; /* Плавная анимация */
+}
+
+/* Анимация для полета бабочек */
+@keyframes flyButterfly {
+    0% {
+        transform: translateX(-100px) translateY(30px); /* Начинаем слева, немного ниже */
+        opacity: 1;
+    }
+    25% {
+        transform: translateX(calc(25vw + 50px)) translateY(10vh); /* Перемещаем бабочку вправо и немного вверх */
+        opacity: 1;
+    }
+    50% {
+        transform: translateX(calc(50vw + 100px)) translateY(20vh); /* Вверх, вправо */
+        opacity: 1;
+    }
+    75% {
+        transform: translateX(calc(75vw + 150px)) translateY(10vh); /* Еще выше */
+        opacity: 1;
+    }
+    100% {
+        transform: translateX(calc(100vw + 100px)) translateY(30px); /* Завершаем движение справа, чуть ниже */
+        opacity: 0; /* Бабочка исчезает */
+    }
+}
+
+canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+    }
+
 
 
 
